# evidence-uploader

./: README.md
backend/: .env.dist  README.md  alembic.ini  main.py  pre_start.py  pyproject.toml
backend/app/: config.py  controller.py  router.py
backend/app/api/: __init__.py  auth.py  deps.py  upload_item.py  user.py
backend/app/api/api_v1/: __init__.py  upload_item.py  user.py
backend/app/crud/: crud_user.py
backend/app/db/: base.py  base_class.py  crud.py  init_db.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 8d1846e367ef_initial_migration.py
backend/app/models/: __init__.py  upload_item.py  user.py
backend/app/schemas/: __init__.py
backend/app/tests/: conftest.py  test_api.py  test_auth.py
backend/app/tests/utils/: __init__.py  upload_item.py  user.py
backend/app/utils/: __init__.py  deps.py  security.py
frontend/: .env.dist  README.md  index.html  package.json
frontend/src/: App.vue  router.js
frontend/src/assets/css/: font.css  global.css
frontend/src/components/: SlmHeader.vue
frontend/src/components/svg/: Upload.vue
frontend/src/components/widgets/: Checkbox.vue  ErrorMessage.vue  FileUpload.vue  SlmInput.vue
frontend/src/translations/: en.json
frontend/src/views/: ExternalLink.vue  Home.vue  SelectMethod.vue  SolomonLink.vue
